--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -72,26 +72,40 @@
                 >
 
                 <TextView
-                    android:id="@+id/widget_heading1"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/widget_heading1"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"></TextView>
-
-                <TextView
                     android:id="@+id/widget_heading2"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/widget_heading1"
                     android:layout_alignStart="@+id/widget_heading1"
+                    android:layout_marginStart="0dp"
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="0dp"
                     android:text="@string/widget_heading2"
                     android:textColor="@color/black"
                     android:textSize="20sp"></TextView>
+
+                <TextView
+                    android:id="@+id/widget_heading1"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/widget_heading1"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"></TextView>
+
+                <ImageView
+                    android:id="@+id/main_tracker"
+                    android:layout_width="175dp"
+                    android:layout_height="30dp"
+                    android:layout_below="@+id/widget_heading3"
+                    android:layout_alignStart="@id/widget_heading3"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:src="@drawable/tracker_1" />
 
                 <TextView
                     android:id="@+id/widget_heading3"
@@ -106,18 +120,6 @@
                     android:textSize="20sp">
 
                 </TextView>
-
-                <ImageView
-                    android:id="@+id/main_tracker"
-                    android:layout_width="175dp"
-                    android:layout_height="30dp"
-                    android:layout_below="@+id/widget_heading3"
-                    android:layout_alignStart="@id/widget_heading3"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="20dp"
-                    android:src="@drawable/tracker_1" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
